<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.mashup.ipdam.ui.register.RegisterInputType" />

        <import type="com.mashup.ipdam.ui.register.RegisterViewModel" />

        <variable
            name="viewModel"
            type="RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterActivity">

        <ImageView
            android:id="@+id/registerBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_x_mark"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/register_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registerIdTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="23dp"
            android:gravity="center"
            android:minHeight="30dp"
            android:text="@string/register_id_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerTitle" />

        <EditText
            android:id="@+id/registerIdEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_corner_stroke"
            android:hint="@string/register_id_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:lines="1"
            android:minHeight="@dimen/height_edittext"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@={viewModel.id}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerIdTitle" />

        <TextView
            android:id="@+id/registerPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:minHeight="30dp"
            android:text="@string/register_password_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerIdEditText" />

        <EditText
            android:id="@+id/registerPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_corner_stroke"
            android:hint="@string/register_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:lines="1"
            android:minHeight="@dimen/height_edittext"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@={viewModel.password}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordTitle" />

        <TextView
            android:id="@+id/registerPasswordCheckTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:minHeight="30dp"
            android:text="@string/register_password_check_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText" />

        <EditText
            android:id="@+id/registerPasswordCheckEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_corner_stroke"
            android:hint="@string/register_password_check_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:lines="1"
            android:minHeight="@dimen/height_edittext"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@={viewModel.passwordCheck}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordCheckTitle" />

        <TextView
            android:id="@+id/registerSchoolTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:minHeight="30dp"
            android:text="@string/register_school_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordCheckEditText" />

        <EditText
            android:id="@+id/registerSchoolEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_corner_stroke"
            android:hint="@string/register_school_hint"
            android:importantForAutofill="no"
            android:inputType="none"
            android:lines="1"
            android:minHeight="@dimen/height_edittext"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@={viewModel.searchSchool}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerSchoolTitle" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_corner_solid"
            android:backgroundTint="@color/primary_color"
            android:text="@string/register_button"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerSchoolEditText" />

        <TextView
            android:id="@+id/registerIdResult"
            visible="@{viewModel.idInputType != RegisterInputType.NONE}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="4dp"
            android:text="@string/register_id_result_failed"
            android:textColor="@color/red_color"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/registerIdEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/registerIdTitle" />

        <TextView
            android:id="@+id/registerPasswordResult"
            visible="@{viewModel.passwordInputType != RegisterInputType.NONE}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="4dp"
            android:text="@string/register_id_result_failed"
            android:textColor="@color/red_color"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/registerPasswordEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/registerPasswordTitle" />

        <TextView
            android:id="@+id/registerPasswordCheckResult"
            visible="@{viewModel.passwordCheckInputType != RegisterInputType.NONE}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="4dp"
            android:text="@string/register_password_result_success"
            android:textColor="@color/primary_color"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/registerPasswordCheckEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/registerPasswordCheckTitle" />

        <ImageButton
            android:id="@+id/registerSearchButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:onClick="@{() -> viewModel.showSearchSchoolResult()}"
            app:layout_constraintBottom_toBottomOf="@id/registerSchoolEditText"
            app:layout_constraintEnd_toEndOf="@id/registerSchoolEditText"
            app:layout_constraintTop_toTopOf="@id/registerSchoolEditText"
            app:srcCompat="@drawable/ic_search"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>